Another fix for the highlighting on mobile issue. Please work this time

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,8 @@
 
 * {
   box-sizing: border-box;
+  user-select: inherit;
+  -webkit-user-select: inherit;
 }
 
 body {
